--- a/config.toml
+++ b/config.toml
@@ -5,28 +5,24 @@
 #
 #=========================================================================================
 
-base_url = "https://example.com"      # Domain name of your website
-title = "xxxx"
-description = "xxxx xxxx xxxx"
+base_url = "http://hectorlop.com"
+title = "Hector Lopez"
+description = "Reflections"
 default_language = "en"
 theme = "serene"
 output_dir = "public"
 compile_sass = true
 minify_html = true
 build_search_index = false            # Keep this false, search is temporarily unsupported
-generate_feed = false                 # Whether to generate a feed file in root, read docs for more info about rss feed
-feed_filename = "feed.xml"            # The file name of feed, "feed.xml" / "atom.xml" / "rss.xml", read docs for more info
+generate_feed = true                 # Whether to generate a feed file in root, read docs for more info about rss feed
+feed_filename = "atom.xml"            # The file name of feed, "feed.xml" / "atom.xml" / "rss.xml", read docs for more info
 taxonomies = [{ name = "tags" }, { name = "categories" }]
 
 [markdown]
 highlight_code = true
 extra_syntaxes_and_themes = []
-#highlight_themes_css = [
-#    { theme = "serene-light", filename = "hl-light.css"},
-#    { theme = "serene-dark", filename = "hl-dark.css"},
-#]
-highlight_theme = "nord"
-render_emoji = false
+highlight_theme = "gruvbox-dark"
+render_emoji = true
 external_links_target_blank = false
 external_links_no_follow = true
 external_links_no_referrer = true
@@ -41,54 +37,67 @@ anchors = "on"
 
 [extra]
 
-name = "xxxx"                         # Your name
-id = "xxxx"                           # Your id / username / handle
-bio = "xxxx"                          # Your bio
+name = "Hector Lopez"                         # Your name
+id = "hectorLop"                           # Your id / username / handle
+bio = "Reflections"                          # Your bio
 avatar = "img/avatar.webp"            # Your avatar
+
+#============== Social media links =================================
 links = [                             # Your links
     { name = "GitHub", icon = "github", url = "https://github.com/<your-username>" },
     { name = "Twitter", icon = "twitter", url = "https://twitter.com/<your-username>" },
     { name = "Email", icon = "email", url = "mailto:<your-email-address>" },
 ]
 
-homepage_layout = "about"             # "about" | "list" | "recent"
+#============== Icons, you can choose at https://remixicon.com/ ====
+blog_icon = "ri-terminal-box-line"          
+projects_icon = "ri-compasses-2-line"
+home_icon = "ri-user-6-line"
+rss_icon = "ri-rss-line"
+toc_icon = "ri-menu-2-line"
 
-recent_max = 15
-recent_more = true
-recent_more_text = "more »"
+#============== Feed ===============================================
+feed_in_blog_section = true      # Whether to make feed file in blog section, url will be https://example.com/blog/feed.xml, read docs for more info about rss feed
 
-sections = [
-    { name = "blog", path = "/blog", is_external = false },
-    # { name = "projects", path = "/projects", is_external = false },
-    # { name = "about", path = "/about", is_external = false },
-    # { name = "github", path = "https://github.com/<your-username>", is_external = true },
-]
-blog_section_path = "/blog"
+#homepage_layout = "about"             # "about" | "list" | "recent"
+#
+#recent_max = 15
+#recent_more = true
+#recent_more_text = "more »"
+#
+#sections = [
+#    { name = "blog", path = "/blog", is_external = false },
+#]
+#blog_section_path = "/blog"
+#
+#
+#display_id = true                     # Whether to display your id on homepage
+#blog_categorized = true               # Whether to categorize blog posts
+#blur_effect = true                    # Whether to turn on blur effect on navigation bar
+#back_to_top = true                    # Whether to show back-to-top button on post pages
+#
+#copy = true                           # Whether to add a copy button on code blocks by default
+#truncate_summary = false              # Whether to truncate the summary of a post by default
+#
+#not_found_title = "404"
+#not_found_error_text = "Not Found"
+#not_found_recover_text = "« back to home »"
 
-nav_separator = "::"
-nav_wrapper_left = "{"
-nav_wrapper_right = "} ;"
-nav_wrapper_separator = ","
-
-display_id = true                     # Whether to display your id on homepage
-blog_categorized = true               # Whether to categorize blog posts
-blur_effect = true                    # Whether to turn on blur effect on navigation bar
-back_to_top = true                    # Whether to show back-to-top button on post pages
-
-toc = true                            # Whether to show Table-Of-Contents by default
-copy = true                           # Whether to add a copy button on code blocks by default
-comment = false                       # Whether to show giscus comment section by default, see https://giscus.app for more info
+#============== Some feature switches ================================
+toc = true                       # Whether to show Table-Of-Contents [Can be overridden by page config]
 display_tags = true                   # Whether to display tags on post pages by default
-truncate_summary = false              # Whether to truncate the summary of a post by default
+blur_effect = true               # Whether to turn on blur effect on navigation bar
+back_to_top_button = true        # Whether to show Back-To-Top button
+progress_bar = true              # Whether to show reading progress bar
+cc_license = false               # Whether to show Creative-Commons statement [Can be overridden by page config]
+cc_license_statement = "This work is licensed under [CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)."  # The Creative-Commons statement
+outdate_warn = false             # Whether to show outdate warning [Can be overridden by page config]
+outdate_warn_days = 120          # How many days will a post be outdated [Can be overridden by page config]
+outdate_warn_text_before = "Note: This article was last updated "
+outdate_warn_text_after = " days ago and may be out of date."
 
-outdate_alert = false                 # Whether to show outdate alert by default
-outdate_alert_days = 120              # How many days will a post be outdated by default
-outdate_alert_text_before = "This article was last updated "
-outdate_alert_text_after = " days ago and may be out of date."
-
-footer_copyright = "© 2023 <your-name>"
-footer_credits = true                 # Whether to show "powered by zola and serene" in footer
-
-not_found_title = "404"
-not_found_error_text = "Not Found"
-not_found_recover_text = "« back to home »"
+#============== Footer =============================================
+footer_copyright_name = "Hector Lopez"
+footer_copyright_year = "2024"
+footer_custom = "Reflections"
+footer_credits = false            # Whether to show "Powered by Zola and Serene" in footer
