--- a/config.toml
+++ b/config.toml
@@ -21,7 +21,7 @@ taxonomies = [{ name = "tags" }, { name = "categories" }]
 [markdown]
 highlight_code = true
 extra_syntaxes_and_themes = []
-highlight_theme = "gruvbox-dark"
+highlight_theme = "nord"
 render_emoji = true
 external_links_target_blank = false
 external_links_no_follow = true
@@ -40,7 +40,7 @@ anchors = "on"
 name = "Hector Lopez"                         # Your name
 id = "hectorLop"                           # Your id / username / handle
 bio = "Reflections"                          # Your bio
-avatar = "img/avatar.webp"            # Your avatar
+avatar = "img/avatar.jpeg"            # Your avatar
 
 #============== Social media links =================================
 links = [                             # Your links
@@ -65,10 +65,14 @@ feed_in_blog_section = true      # Whether to make feed file in blog section, ur
 #recent_more = true
 #recent_more_text = "more »"
 #
-#sections = [
-#    { name = "blog", path = "/blog", is_external = false },
-#]
-#blog_section_path = "/blog"
+sections = [
+    { name = "blog", path = "/blog", is_external = false },
+]
+blog_section_path = "/blog"
+nav_separator = "::"
+nav_wrapper_left = "{"
+nav_wrapper_right = "} ;"
+nav_wrapper_separator = ","
 #
 #
 #display_id = true                     # Whether to display your id on homepage
@@ -79,11 +83,12 @@ feed_in_blog_section = true      # Whether to make feed file in blog section, ur
 #copy = true                           # Whether to add a copy button on code blocks by default
 #truncate_summary = false              # Whether to truncate the summary of a post by default
 #
-#not_found_title = "404"
-#not_found_error_text = "Not Found"
-#not_found_recover_text = "« back to home »"
+not_found_title = "404"
+not_found_error_text = "Not Found"
+not_found_recover_text = "« back to home »"
 
 #============== Some feature switches ================================
+homepage_layout = "about"             # "about" | "list" | "recent"
 toc = true                       # Whether to show Table-Of-Contents [Can be overridden by page config]
 display_tags = true                   # Whether to display tags on post pages by default
 blur_effect = true               # Whether to turn on blur effect on navigation bar
@@ -97,6 +102,7 @@ outdate_warn_text_before = "Note: This article was last updated "
 outdate_warn_text_after = " days ago and may be out of date."
 
 #============== Footer =============================================
+footer_copyright = "test"
 footer_copyright_name = "Hector Lopez"
 footer_copyright_year = "2024"
 footer_custom = "Reflections"
